@@ -45,7 +45,7 @@ pid_t 					pid[MAX_N];
 std::vector<std::string>		peers;
 bool					instance_forked = false;
 
-std::string				passphrase, armored_message, armored_seckey, ifilename, ofilename, passwords;
+std::string				passphrase, armored_message, armored_seckey, ifilename, ofilename, passwords, hostname;
 gcry_mpi_t 				dsa_p, dsa_q, dsa_g, dsa_y, dsa_x, elg_p, elg_q, elg_g, elg_y, elg_x;
 gcry_mpi_t 				gk, myk;
 gcry_sexp_t				elgkey;
@@ -61,6 +61,7 @@ int 					opt_verbose = 0;
 char					*opt_ifilename = NULL;
 char					*opt_ofilename = NULL;
 char					*opt_passwords = NULL;
+char					*opt_hostname = NULL;
 
 void read_private_key
 	(const std::string filename, std::string &result)
@@ -1918,6 +1919,7 @@ void run_instance
 }
 
 #ifdef GNUNET
+char *gnunet_opt_hostname = NULL;
 char *gnunet_opt_ifilename = NULL;
 char *gnunet_opt_ofilename = NULL;
 char *gnunet_opt_passwords = NULL;
@@ -1969,6 +1971,12 @@ int main
 	static const struct GNUNET_GETOPT_CommandLineOption options[] = {
 		GNUNET_GETOPT_option_cfgfile(&cfg_fn),
 		GNUNET_GETOPT_option_help(about),
+		GNUNET_GETOPT_option_string('H',
+			"hostname",
+			"STRING",
+			"hostname (e.g. onion address) of this peer within PEERS",
+			&gnunet_opt_hostname
+		),
 		GNUNET_GETOPT_option_string('i',
 			"input",
 			"FILENAME",
@@ -2034,10 +2042,14 @@ int main
 		opt_ifilename = gnunet_opt_ifilename;
 	if (gnunet_opt_ofilename != NULL)
 		opt_ofilename = gnunet_opt_ofilename;
+	if (gnunet_opt_hostname != NULL)
+		opt_hostname = gnunet_opt_hostname;
 	if (gnunet_opt_passwords != NULL)
 		opt_passwords = gnunet_opt_passwords;
 	if (gnunet_opt_passwords != NULL)
 		passwords = gnunet_opt_passwords; // get passwords from GNUnet options
+	if (gnunet_opt_hostname != NULL)
+		hostname = gnunet_opt_hostname; // get hostname from GNUnet options
 #endif
 
 	bool nonint = false;
@@ -2054,7 +2066,7 @@ int main
 			std::string arg = argv[i+1];
 			// ignore options
 			if ((arg.find("-c") == 0) || (arg.find("-p") == 0) || (arg.find("-w") == 0) || (arg.find("-L") == 0) || (arg.find("-l") == 0) ||
-				(arg.find("-i") == 0) || (arg.find("-o") == 0) || (arg.find("-x") == 0) || (arg.find("-P") == 0))
+				(arg.find("-i") == 0) || (arg.find("-o") == 0) || (arg.find("-x") == 0) || (arg.find("-P") == 0) || (arg.find("-H") == 0))
 			{
 				size_t idx = ++i;
 				if ((arg.find("-i") == 0) && (idx < (size_t)(argc - 1)) && (opt_ifilename == NULL))
@@ -2066,6 +2078,11 @@ int main
 				{
 					ofilename = argv[i+1];
 					opt_ofilename = (char*)ofilename.c_str();
+				}
+				if ((arg.find("-H") == 0) && (idx < (size_t)(argc - 1)) && (opt_hostname == NULL))
+				{
+					hostname = argv[i+1];
+					opt_hostname = (char*)hostname.c_str();
 				}
 				if ((arg.find("-P") == 0) && (idx < (size_t)(argc - 1)) && (opt_passwords == NULL))
 				{
@@ -2083,6 +2100,7 @@ int main
 					std::cout << about << std::endl;
 					std::cout << "Arguments mandatory for long options are also mandatory for short options." << std::endl;
 					std::cout << "  -h, --help             print this help" << std::endl;
+					std::cout << "  -H STRING              hostname (e.g. onion address) of this peer within PEERS" << std::endl;
 					std::cout << "  -i FILENAME            read encrypted message from FILENAME" << std::endl;
 					std::cout << "  -n, --non-interactive  run in non-interactive mode" << std::endl;
 					std::cout << "  -o FILENAME            write decrypted message to FILENAME" << std::endl;
@@ -2243,10 +2261,33 @@ int main
 		else
 			return 1;
 	}
+	if (opt_hostname != NULL)
+	{
+		int ret = 0;
+		builtin_init(hostname);
+		builtin_bindports(35000, false);
+		builtin_bindports(36000, true);
+		while (builtin_connect(35000, false) < peers.size())
+			sleep(1);
+		while (builtin_connect(36000, true) < peers.size())
+			sleep(1);
+		builtin_accept();
+		builtin_fork();
+		ret = builtin_io();
+		builtin_close();
+		builtin_done();
+		return ret;
+	}
 
 	// start interactive variant with GNUnet or otherwise a local test
 #ifdef GNUNET
 	static const struct GNUNET_GETOPT_CommandLineOption myoptions[] = {
+		GNUNET_GETOPT_option_string('H',
+			"hostname",
+			"STRING",
+			"hostname (e.g. onion address) of this peer within PEERS",
+			&gnunet_opt_hostname
+		),
 		GNUNET_GETOPT_option_string('i',
 			"input",
 			"FILENAME",
