@@ -45,7 +45,7 @@ pid_t 					pid[MAX_N];
 std::vector<std::string>		peers;
 bool					instance_forked = false;
 
-std::string				passphrase, armored_seckey, u, passwords;
+std::string				passphrase, armored_seckey, u, passwords, hostname;
 tmcg_octets_t				keyid, pub, sub, uidsig, subsig;
 mpz_t					dss_p, dss_q, dss_g, dss_h, dss_x_i, dss_xprime_i;
 size_t					dss_n, dss_t, dss_i;
@@ -54,6 +54,7 @@ std::vector< std::vector<mpz_ptr> >	dss_c_ik;
 gcry_mpi_t 				dsa_p, dsa_q, dsa_g, dsa_y, dsa_x, elg_p, elg_g, elg_y;
 int 					opt_verbose = 0;
 char					*opt_passwords = NULL;
+char					*opt_hostname = NULL;
 
 void read_private_key
 	(const std::string filename, std::string &result)
@@ -1113,6 +1114,7 @@ void run_instance
 }
 
 #ifdef GNUNET
+char *gnunet_opt_hostname = NULL;
 char *gnunet_opt_passwords = NULL;
 char *gnunet_opt_port = NULL;
 unsigned int gnunet_opt_reason = 0;
@@ -1163,6 +1165,12 @@ int main
 	static const struct GNUNET_GETOPT_CommandLineOption options[] = {
 		GNUNET_GETOPT_option_cfgfile(&cfg_fn),
 		GNUNET_GETOPT_option_help(about),
+		GNUNET_GETOPT_option_string('H',
+			"hostname",
+			"STRING",
+			"hostname (e.g. onion address) of this peer within PEERS",
+			&gnunet_opt_hostname
+		),
 		GNUNET_GETOPT_option_logfile(&logfile),
 		GNUNET_GETOPT_option_loglevel(&loglev),
 		GNUNET_GETOPT_option_string('p',
@@ -1213,10 +1221,14 @@ int main
 		std::cerr << "ERROR: GNUNET_GETOPT_run() failed" << std::endl;
 		return -1;
 	}
+	if (gnunet_opt_hostname != NULL)
+		opt_hostname = gnunet_opt_hostname;
 	if (gnunet_opt_passwords != NULL)
 		opt_passwords = gnunet_opt_passwords;
 	if (gnunet_opt_passwords != NULL)
 		passwords = gnunet_opt_passwords; // get passwords from GNUnet options
+	if (gnunet_opt_hostname != NULL)
+		hostname = gnunet_opt_hostname; // get hostname from GNUnet options
 #endif
 
 	if (argc < 2)
@@ -1232,9 +1244,14 @@ int main
 			std::string arg = argv[i+1];
 			// ignore options
 			if ((arg.find("-c") == 0) || (arg.find("-p") == 0) || (arg.find("-r") == 0) || (arg.find("-w") == 0) || (arg.find("-L") == 0) || 
-				(arg.find("-l") == 0) || (arg.find("-x") == 0) || (arg.find("-P") == 0))
+				(arg.find("-l") == 0) || (arg.find("-x") == 0) || (arg.find("-P") == 0) || (arg.find("-H") == 0))
 			{
 				size_t idx = ++i;
+				if ((arg.find("-H") == 0) && (idx < (size_t)(argc - 1)) && (opt_hostname == NULL))
+				{
+					hostname = argv[i+1];
+					opt_hostname = (char*)hostname.c_str();
+				}
 				if ((arg.find("-P") == 0) && (idx < (size_t)(argc - 1)) && (opt_passwords == NULL))
 				{
 					passwords = argv[i+1];
@@ -1251,6 +1268,7 @@ int main
 					std::cout << about << std::endl;
 					std::cout << "Arguments mandatory for long options are also mandatory for short options." << std::endl;
 					std::cout << "  -h, --help     print this help" << std::endl;
+					std::cout << "  -H STRING      hostname (e.g. onion address) of this peer within PEERS" << std::endl;
 					std::cout << "  -P STRING      exchanged passwords to protect private and broadcast channels" << std::endl;
 					std::cout << "  -v, --version  print the version number" << std::endl;
 					std::cout << "  -V, --verbose  turn on verbose output" << std::endl;
@@ -1296,10 +1314,33 @@ int main
 		for (size_t i = 0; i < peers.size(); i++)
 			std::cout << peers[i] << std::endl;
 	}
+	if (opt_hostname != NULL)
+	{
+		int ret = 0;
+		builtin_init(hostname);
+		builtin_bindports(35000, false);
+		builtin_bindports(36000, true);
+		while (builtin_connect(35000, false) < peers.size())
+			sleep(1);
+		while (builtin_connect(36000, true) < peers.size())
+			sleep(1);
+		builtin_accept();
+		builtin_fork();
+		ret = builtin_io();
+		builtin_close();
+		builtin_done();
+		return ret;
+	}
 
 	// start interactive variant with GNUnet or otherwise a local test
 #ifdef GNUNET
 	static const struct GNUNET_GETOPT_CommandLineOption myoptions[] = {
+		GNUNET_GETOPT_option_string('H',
+			"hostname",
+			"STRING",
+			"hostname (e.g. onion address) of this peer within PEERS",
+			&gnunet_opt_hostname
+		),
 		GNUNET_GETOPT_option_string('p',
 			"port",
 			"STRING",
